// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tab should render set mix options correctly 1`] = `
<div class="fx-tab no--scroll">
  <ul class="fx-tab_list">
    <li class="fx-tab_item fx-vertical-hairline active">
      <badge-stub content="0" maxcount="99" dot="false" showzero="false" animated="false" offset="0,0" class="fx-tab_item-inner"></badge-stub>
      <!--v-if-->
    </li>
    <li class="fx-tab_item fx-vertical-hairline active-next">
      <badge-stub content="惠" maxcount="99" dot="false" showzero="false" animated="false" offset="0,0" class="fx-tab_item-inner"></badge-stub>
      <!--v-if-->
    </li>
    <li class="fx-tab_item fx-vertical-hairline">
      <badge-stub content="0" maxcount="99" dot="false" showzero="false" animated="false" offset="0,0" class="fx-tab_item-inner"></badge-stub>
      <!--v-if-->
    </li>
    <li class="fx-tab_item fx-vertical-hairline">
      <badge-stub content="1" maxcount="99" dot="false" showzero="false" animated="false" offset="0,0" class="fx-tab_item-inner"></badge-stub>
      <!--v-if-->
    </li>
  </ul><span class="fx-tab_underline"></span>
</div>
`;

exports[`Tab should render set options correctly 1`] = `
<div class="fx-tab">
  <ul class="fx-tab_list">
    <li class="fx-tab_item fx-vertical-hairline active">
      <badge-stub content="0" maxcount="99" dot="false" showzero="false" animated="false" offset="0,0" class="fx-tab_item-inner"></badge-stub>
      <!--v-if-->
    </li>
    <li class="fx-tab_item fx-vertical-hairline active-next">
      <badge-stub content="0" maxcount="99" dot="false" showzero="false" animated="false" offset="0,0" class="fx-tab_item-inner"></badge-stub>
      <!--v-if-->
    </li>
    <li class="fx-tab_item fx-vertical-hairline">
      <badge-stub content="0" maxcount="99" dot="false" showzero="false" animated="false" offset="0,0" class="fx-tab_item-inner"></badge-stub>
      <!--v-if-->
    </li>
    <li class="fx-tab_item fx-vertical-hairline">
      <badge-stub content="0" maxcount="99" dot="false" showzero="false" animated="false" offset="0,0" class="fx-tab_item-inner"></badge-stub>
      <!--v-if-->
    </li>
    <li class="fx-tab_item fx-vertical-hairline">
      <badge-stub content="0" maxcount="99" dot="false" showzero="false" animated="false" offset="0,0" class="fx-tab_item-inner"></badge-stub>
      <!--v-if-->
    </li>
    <li class="fx-tab_item fx-vertical-hairline">
      <badge-stub content="0" maxcount="99" dot="false" showzero="false" animated="false" offset="0,0" class="fx-tab_item-inner"></badge-stub>
      <!--v-if-->
    </li>
    <li class="fx-tab_item fx-vertical-hairline">
      <badge-stub content="0" maxcount="99" dot="false" showzero="false" animated="false" offset="0,0" class="fx-tab_item-inner"></badge-stub>
      <!--v-if-->
    </li>
    <li class="fx-tab_item fx-vertical-hairline">
      <badge-stub content="0" maxcount="99" dot="false" showzero="false" animated="false" offset="0,0" class="fx-tab_item-inner"></badge-stub>
      <!--v-if-->
    </li>
    <li class="fx-tab_item fx-vertical-hairline">
      <badge-stub content="0" maxcount="99" dot="false" showzero="false" animated="false" offset="0,0" class="fx-tab_item-inner"></badge-stub>
      <!--v-if-->
    </li>
    <li class="fx-tab_item fx-vertical-hairline">
      <badge-stub content="0" maxcount="99" dot="false" showzero="false" animated="false" offset="0,0" class="fx-tab_item-inner"></badge-stub>
      <!--v-if-->
    </li>
    <li class="fx-tab_item fx-vertical-hairline">
      <badge-stub content="0" maxcount="99" dot="false" showzero="false" animated="false" offset="0,0" class="fx-tab_item-inner"></badge-stub>
      <!--v-if-->
    </li>
    <li class="fx-tab_item fx-vertical-hairline">
      <badge-stub content="0" maxcount="99" dot="false" showzero="false" animated="false" offset="0,0" class="fx-tab_item-inner"></badge-stub>
      <!--v-if-->
    </li>
    <li class="fx-tab_item fx-vertical-hairline">
      <badge-stub content="0" maxcount="99" dot="false" showzero="false" animated="false" offset="0,0" class="fx-tab_item-inner"></badge-stub>
      <!--v-if-->
    </li>
    <li class="fx-tab_item fx-vertical-hairline">
      <badge-stub content="0" maxcount="99" dot="false" showzero="false" animated="false" offset="0,0" class="fx-tab_item-inner"></badge-stub>
      <!--v-if-->
    </li>
    <li class="fx-tab_item fx-vertical-hairline">
      <badge-stub content="0" maxcount="99" dot="false" showzero="false" animated="false" offset="0,0" class="fx-tab_item-inner"></badge-stub>
      <!--v-if-->
    </li>
    <li class="fx-tab_item fx-vertical-hairline">
      <badge-stub content="0" maxcount="99" dot="false" showzero="false" animated="false" offset="0,0" class="fx-tab_item-inner"></badge-stub>
      <!--v-if-->
    </li>
    <li class="fx-tab_item fx-vertical-hairline">
      <badge-stub content="0" maxcount="99" dot="false" showzero="false" animated="false" offset="0,0" class="fx-tab_item-inner"></badge-stub>
      <!--v-if-->
    </li>
  </ul><span class="fx-tab_underline"></span>
</div>
`;
